# warp

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  build.rs  pyproject.toml  signature.fbs  symbol.fbs  type.fbs
.cargo/: config.toml
.github/workflows/: CI.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
fbcg_rust/: Cargo.toml  build.rs
fbcg_rust/src/: lib.rs
fbcg_rust/src/gen_flatbuffers/sig_bin/: data_generated.rs  function_constraint_generated.rs  function_generated.rs
fbcg_rust/src/gen_flatbuffers/symbol_bin/: data_symbol_class_generated.rs  function_symbol_class_generated.rs  symbol_class_generated.rs
fbcg_rust/src/gen_flatbuffers/type_bin/: access_alignment_generated.rs  array_generated.rs  array_modifiers_generated.rs  bit_offset_generated.rs  bit_shift_generated.rs  bit_size_generated.rs  bit_width_generated.rs  computed_type_generated.rs  constant_modifier_class_generated.rs  data_generated.rs  descriptor_modifier_class_generated.rs  enumeration_generated.rs  function_member_generated.rs  location_class_generated.rs  metadata_modifier_class_generated.rs  referrer_generated.rs  register_location_generated.rs  stack_location_generated.rs  structure_member_generated.rs  type_alignment_generated.rs  type_class_generated.rs  type_generated.rs  type_modifier_class_generated.rs  (+3 more)
rust/: Cargo.toml  build.rs  lib.rs  signature.rs  symbol.rs  type.rs
rust/benches/: chunk.rs  type.rs  void.rs
rust/examples/: dumper.rs  random.rs  type_builder.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: file.rs  function.rs  type.rs
rust/gen_flatbuffers/: mod.rs
rust/gen_flatbuffers/sig_bin/: basic_block_generated.rs  function_constraints_generated.rs  function_generated.rs
rust/gen_flatbuffers/symbol_bin/: symbol_generated.rs  symbol_modifiers_generated.rs
rust/gen_flatbuffers/type_bin/: calling_convention_generated.rs  fixed_alignment_generated.rs  float_generated.rs  integer_generated.rs  pointer_addressing_generated.rs  pointer_generated.rs  structure_member_modifiers_generated.rs  union_member_generated.rs
rust/signature/: basic_block.rs  function.rs
rust/signature/function/: constraints.rs
rust/src/: cached_builder.rs  chunk.rs  lib.rs  mock.rs  signature.rs  symbol.rs  target.rs  type.rs
rust/src/gen_flatbuffers/: mod.rs
rust/src/gen_flatbuffers/sig_bin/: basic_block_generated.rs  basic_block_guid_generated.rs  constraint_generated.rs  constraint_guid_generated.rs  function_comment_generated.rs  function_generated.rs  function_guid_generated.rs  function_variable_generated.rs  signature_chunk_generated.rs
rust/src/gen_flatbuffers/symbol_bin/: symbol_class_generated.rs  symbol_generated.rs  symbol_modifiers_generated.rs
rust/src/gen_flatbuffers/target_bin/: target_generated.rs
rust/src/gen_flatbuffers/type_bin/: array_modifiers_generated.rs  bit_offset_generated.rs  bit_shift_generated.rs  bit_size_generated.rs  bit_width_generated.rs  boolean_generated.rs  character_generated.rs  computed_type_generated.rs  enumeration_member_generated.rs  function_generated.rs  function_member_generated.rs  function_member_location_generated.rs  metadata_value_type_generated.rs  referrer_generated.rs  structure_generated.rs  structure_member_modifiers_generated.rs  type_chunk_generated.rs  type_generated.rs  type_guid_generated.rs  type_metadata_generated.rs  type_modifiers_generated.rs  union_generated.rs  unsigned_bit_offset_generated.rs  void_generated.rs
rust/src/gen_flatbuffers/warp/: chunk_generated.rs  chunk_header_generated.rs  chunk_type_generated.rs  compression_type_generated.rs  file_generated.rs  file_header_generated.rs
rust/src/signature/: basic_block.rs  chunk.rs  comment.rs  constraint.rs  function.rs  variable.rs
rust/src/type/: chunk.rs  class.rs  guid.rs
rust/src/type/class/: array.rs  boolean.rs  character.rs  enumeration.rs  float.rs  function.rs  integer.rs  pointer.rs  referrer.rs  structure.rs  union.rs  void.rs
rust/symbol/: class.rs
rust/tests/: chunk.rs  file.rs  signature.rs  types.rs
rust/tests/snapshots/: file__file_format_regression.snap
rust/type/: class.rs  guid.rs  modifier.rs
rust/type/class/: array.rs  boolean.rs  character.rs  enumeration.rs  float.rs  function.rs  integer.rs  pointer.rs  referrer.rs  structure.rs  union.rs  void.rs
sigem/: Cargo.toml  build.rs
sigem/fixtures/src/: library.rs
sigem/scripts/: README.md  downpad.py  downwind.py  extract_archives.py
sigem/src/: main.rs
signaturebuild/: Cargo.toml
signaturebuild/src/: basic_block.rs  function.rs  lib.rs
signaturebuild/src/function/: constraints.rs
sigview/: Cargo.toml
sigview/src/: graph.rs  main.rs
symbolbuild/: Cargo.toml
symbolbuild/src/: lib.rs
typebuild/: Cargo.toml
typebuild/benches/: void.rs
typebuild/examples/: simple.rs
typebuild/src/: guid.rs  lib.rs  type.rs
typebuild/src/type/: class.rs  modifier.rs
typebuild/src/type/class/: array.rs  boolean.rs  character.rs  enumeration.rs  float.rs  function.rs  integer.rs  pointer.rs  referrer.rs  structure.rs  union.rs  void.rs
warp_binja/: Cargo.toml  build.rs
warp_binja/benches/: convert.rs  function.rs  guid.rs
warp_binja/src/: cache.rs  convert.rs  lib.rs  matcher.rs  plugin.rs
warp_binja/src/plugin/: apply.rs  create.rs  find.rs  types.rs
warp_cli/: Cargo.toml
warp_cli/src/: main.rs  operation.rs  utility.rs
warp_cli/src/operation/: find.rs  merge.rs
