[package]
name = "sigem"
version = "0.1.0"
edition = "2021"

[dependencies]
binaryninja = { workspace = true }
env_logger = "0.11.5"
log = "0.4"
signaturebuild = { path = "../signaturebuild" }
warp_binja = { path = "../warp_binja" }
clap = { version = "4.5.16", features = ["derive"] }
rayon = "1.10.0"
ar = { git = "https://github.com/mdsteele/rust-ar" }
tempdir = "0.3.7"
serde_json = "1.0.132"


[build-dependencies]
cc = "1.1.28"