[package]
name = "warp_binja"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
binaryninja = { path = "../../binaryninja/api/rust", features = ["rayon"] }
binaryninjacore-sys = { path = "../../binaryninja/api/rust/binaryninjacore-sys" }
typebuild = { path = "../typebuild" }
symbolbuild = { path = "../symbolbuild" }
signaturebuild = { path = "../signaturebuild" }
log = "0.4"
arboard = "3.4"
rayon = "1.10"
dashmap = "6.1"
walkdir = "2.5"
fastbloom = "0.7"

[build-dependencies]
cc = "1.1.28"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "guid"
harness = false

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "function"
harness = false