[package]
name = "warp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.warp]
path = ".."

[[bin]]
name = "type"
path = "fuzz_targets/type.rs"
test = false
doc = false
bench = false

[[bin]]
name = "function"
path = "fuzz_targets/function.rs"
test = false
doc = false
bench = false

[[bin]]
name = "file"
path = "fuzz_targets/file.rs"
test = false
doc = false
bench = false